Fixes the share autocomplete scrollbars

--- a/core/css/jquery-ui-fixes.scss
+++ b/core/css/jquery-ui-fixes.scss
@@ -171,6 +171,14 @@
 .ui-autocomplete {
 	&.ui-menu {
 		padding: 0;
+
+		/* scrolling starts from three items,
+		 * so hide overflow and scrollbars for a clean layout */
+		&.item-count-1,
+		&.item-count-2 {
+			overflow-y: hidden;
+		}
+
 		.ui-menu-item a {
 			color: var(--color-text-lighter);
 			display: block;
